<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_margin="15dp"
        android:layout_weight="0"
        android:contentDescription="@string/pic_desccribe"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/bean" />

    <EditText
        android:id="@+id/login_nickname"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0"
        android:ems="10"
        android:hint="@string/account"
        android:inputType="textPersonName"
        android:singleLine="true" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="true" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0"
        android:background="@color/lightRed"
        android:text="@string/login"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/new_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="7dp"
        android:layout_weight="0"
        android:background="@color/white"
        android:text="@string/regist_new_account"
        android:textColor="@color/lightRed" />
</LinearLayout>
